--- a/templates/actors/parts/inventory/actor-inventory-item.hbs
+++ b/templates/actors/parts/inventory/actor-inventory-item.hbs
@@ -31,9 +31,9 @@
     <div class="item-detail">
         {{#if system.properties.equipable}}
             {{#if system.worn}}
-                <a class="item-control inventory-equip" data-tooltip="Déséquiper"><i class="fas fa-shield-alt"></i></a>
+                <a class="item-control inventory-equip" data-tooltip="Déséquiper"><i class="fa-solid fa-shield"></i></a>
             {{else}}
-                <a class="item-control inventory-equip" data-tooltip="Équiper" style="color:lightgray;"><i class="fas fa-shield-alt"></i></a>
+                <a class="item-control inventory-equip" data-tooltip="Équiper"><i class="fa-regular fa-shield"></i></a>
             {{/if}}
         {{/if}}
         {{#if (and system.properties.consumable (isPositive system.qty))}}
