--- a/styles/global/table.less
+++ b/styles/global/table.less
@@ -8,6 +8,7 @@
 
   &.foldable {
     .inventory-header {
+      
       h3 {
         cursor: pointer;
 
@@ -98,6 +99,7 @@
     border: @borderGroove;
     font-weight: bold;
     line-height: 24px;
+    text-wrap-mode: nowrap; /* vonv le + à côté de Aj qui change de ligne */
 
     h3 {
       margin: 0 -5px 0 0;
@@ -122,7 +124,7 @@
 
   // Item Detail Sections
   .item-detail {
-    flex: 0 0 50px;
+    flex: 0 0 49px; /* vonv arme de contact qui dépasse dans l'inventaire */
     font-size: 12px;
     color: @colorTan;
     text-align: center;
