--- a/styles/global/chat.less
+++ b/styles/global/chat.less
@@ -1,3 +1,23 @@
+.message {
+  font-family: "Signika", sans-serif;
+
+  h2, h3 {
+    font-family: "Signika", sans-serif;
+    margin: 0 0 0.5rem;
+    padding: 0;
+    font-weight: normal;
+  }
+  
+  h2 {
+    font-size: 1.5em;
+    border-bottom: 1px solid #782e22;
+  }
+
+  h3 {
+    font-size: 1.25em;
+  }
+}
+
 .message-header {
   h2.damage{
     color: @colorDamage;
