--- a/styles/global/flex.less
+++ b/styles/global/flex.less
@@ -1,41 +1,42 @@
 /* ----------------------------------------- */
 /*  Flexbox                                  */
 /* ----------------------------------------- */
-
-.flexrow {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-
-  > * {
-    flex: 1;
+.coc .window-content {
+  .flexrow {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+  
+    > * {
+      flex: 1;
+    }
+  
+    .flex1 { flex: 1; }
+    .flex2 { flex: 2; }
+    .flex3 { flex: 3; }
+    .flex4 { flex: 4; }
+    .flex5 { flex: 5; }
+    .flex6 { flex: 6; }
+    .flex7 { flex: 7; }
+    .flex8 { flex: 8; }
+    .flex9 { flex: 9; }
   }
-
-  .flex1 { flex: 1; }
-  .flex2 { flex: 2; }
-  .flex3 { flex: 3; }
-  .flex4 { flex: 4; }
-  .flex5 { flex: 5; }
-  .flex6 { flex: 6; }
-  .flex7 { flex: 7; }
-  .flex8 { flex: 8; }
-  .flex9 { flex: 9; }
-}
-
-.flexcol {
-  display: flex;
-  flex-flow: column nowrap;
-  //flex-direction: column;
-  //flex-wrap: nowrap;
-
-  > * {
-    flex: 1;
+  
+  .flexcol {
+    display: flex;
+    flex-flow: column nowrap;
+    //flex-direction: column;
+    //flex-wrap: nowrap;
+  
+    > * {
+      flex: 1;
+    }
+  
+    .flex1 { flex: 1; }
+    .flex2 { flex: 2; }
+    .flex3 { flex: 3; }
+    .flex4 { flex: 4; }
   }
-
-  .flex1 { flex: 1; }
-  .flex2 { flex: 2; }
-  .flex3 { flex: 3; }
-  .flex4 { flex: 4; }
 }
 
 .flex-group-center,
