--- a/styles/global/flex.less
+++ b/styles/global/flex.less
@@ -1,7 +1,7 @@
 /* ----------------------------------------- */
 /*  Flexbox                                  */
 /* ----------------------------------------- */
-.coc .window-content {
+.coc.actor .window-content {
   .flexrow {
     display: flex;
     flex-flow: row wrap;
